5. Обработка исключений и Spring REST [#504797]