@@ -3,10 +3,13 @@ package ru.job4j.chat.controller;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 import ru.job4j.chat.model.Message;
 import ru.job4j.chat.service.MessageService;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 @RestController
 @RequestMapping("/message")
@@ -20,6 +23,7 @@ public class MessageController {
 
     @PostMapping("/")
     public ResponseEntity<Message> create(@RequestBody Message message) {
+        validateMessage(message);
         return new ResponseEntity<Message>(
                 this.messageService.save(message),
                 HttpStatus.CREATED
@@ -28,6 +32,7 @@ public class MessageController {
 
     @PutMapping("/")
     public ResponseEntity<Void> update(@RequestBody Message message) {
+        validateMessage(message);
         this.messageService.save(message);
         return ResponseEntity.ok().build();
     }
@@ -43,10 +48,10 @@ public class MessageController {
     @GetMapping("/room/{id}")
     public ResponseEntity<List<Message>> findByRoom(@PathVariable long id) {
         var messages = this.messageService.findByRoom(id);
-        return new ResponseEntity<List<Message>>(
-                messages.orElse(List.of(new Message())),
-                messages.isPresent() ? HttpStatus.OK : HttpStatus.NOT_FOUND
-        );
+        if (messages.isPresent() && messages.get().size() == 0) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Messages is not found. Please, check request.");
+        }
+        return new ResponseEntity<>(messages.orElse(Collections.emptyList()), HttpStatus.OK);
     }
 
     @GetMapping("/")
@@ -60,10 +65,19 @@ public class MessageController {
 
     @GetMapping("/{id}")
     public ResponseEntity<Message> findById(@PathVariable long id) {
-        var message = this.messageService.findById(id);
-        return new ResponseEntity<>(
-                message.orElse(new Message()),
-                message.isPresent() ? HttpStatus.OK : HttpStatus.NOT_FOUND
-        );
+        var message = this.messageService.findById(id).orElseThrow(() -> new ResponseStatusException(
+                HttpStatus.NOT_FOUND, "Message is not found. Please, check request."
+        ));
+        return new ResponseEntity<>(message, HttpStatus.OK);
+    }
+
+    private void validateMessage(Message message) throws NullPointerException {
+        String errMsg = "Message must not be empty";
+        String text = message.getDescription();
+        Objects.requireNonNull(text, errMsg);
+        text = text.strip();
+        if (Objects.equals(text, "")) {
+            throw new NullPointerException(errMsg);
+        }
     }
 }
